fix CSS scroll visibility

--- a/src/components/TodoList.css
+++ b/src/components/TodoList.css
@@ -1,5 +1,4 @@
 .todo-list {
-  margin-bottom: 2em;
   position: relative;
   left: -0.5em;
   width: calc(100% + 1em);
